# universal-android-tun2socks

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mokhtarabadi/tun2socks/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bypass_private_ips.txt
app/src/main/cpp/: CMakeLists.txt  README.md  native-lib.cpp
app/src/main/cpp/prebuilt/include/tun2socks/: tun2socks.h
app/src/main/java/com/mokhtarabadi/tun2socks/sample/: ExcludedAppsActivity.java  MainActivity.java  MainApp.java  MainApplication.java  MainNative.java  MainService.java  PreferenceHelper.java  SettingsActivity.java
app/src/main/res/layout/: activity_excluded_apps.xml  activity_main.xml  activity_settings.xml  layout_app_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mokhtarabadi/tun2socks/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
